test/Fail/UnquoteUnbound.err
UnquoteUnbound.agda:9.1-13.32: error: [Unquote.UnboundName]
Unbound name: UnquoteUnbound.a-fresh-name
